--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 
     <div id="content_contacts" class="tabs_names">
     	<div class ="titles" id="content_contacts_title">Contacts</div>
+      <button class="dialer_keys">Kristi Sophia</button>
+      <button class="dialer_keys">Ankita Nadiya</button>
+      <button class="dialer_keys">Nuka Turlough</button>
+      <button class="dialer_keys">Fatima Priska</button>
+      <button class="dialer_keys">Tafik Andrija</button>
     </div>
 
 
